# growtopia_clone

./: CMakeLists.txt  FindENet.cmake  logo.h  main.cpp
engine/: EngineStarter.cpp  EngineStarter.hpp  MacrosHelper.h
engine/Common/: EngineMacros.h
engine/Component/: Component.cpp  Component.h
engine/Gameobject/: Button.cpp  Button.h  Gameobject.cpp  Gameobject.h  ImageObject.cpp  ImageObject.h  Transform.cpp  Transform.h
engine/Input/: InputHandler.cpp  InputHandler.h
engine/Networking/: Client.cpp  Client.h  NetworkStructs.h
engine/Physics/: PhysicsConstants.h
engine/Rendering/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  ShaderManager.h
engine/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
engine/Window/: Window.cpp  Window.h
growtopia/Scenes/: MainMenuScene.cpp  MainMenuScene.h
growtopia_clone/: entrypoint.cpp
growtopia_clone/Common/: BlockTypes.h
growtopia_clone/Player/: Inventory.cpp  Inventory.h  InventoryController.cpp  InventoryController.h  InventoryData.cpp  InventoryData.h  InventoryView.cpp  InventoryView.h  Player.cpp  Player.h
growtopia_clone/Resources/Inventories/: default.xml
growtopia_clone/Resources/Worlds/: default.xml
growtopia_clone/Scenes/: GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h
growtopia_clone/World/: Tile.cpp  Tile.h  World.cpp  World.h  WorldLoader.cpp  WorldLoader.h
server/: Server.cpp
shaders/: fs_default.sc  varying.def.sc  vs_default.sc  vs_default_ui.sc
